--- a/index.html
+++ b/index.html
@@ -446,6 +446,30 @@ avsikten.</legend>
       </div>
     </fieldset>
 
+     <fieldset><legend>50. Accepterar att bli filmad utan mask.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>51. Accepterar även att bli filmad med fullt synbar ID-handling.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>52. Fullständig raknining av huvud, inklusive ögonbryn.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
     <!-- Bakgrundsfrågor -->
     <fieldset>
       <legend>Bakgrundsfrågor</legend>
@@ -481,3 +505,4 @@ avsikten.</legend>
 </body>
 
 </html>
+
