--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <h1>Enkät</h1>
+  <h1>Enkät för fina flickor</h1>
   <form action="https://formspree.io/f/xzzjbqzl" method="POST">
 
     <!-- Frågor 1–40 -->
@@ -470,6 +470,22 @@ avsikten.</legend>
       </div>
     </fieldset>
 
+    <fieldset><legend>53. Intresserad att spela tärning, där summan av fem tärningar samt "Yatzy-utfallet" leder till olika konsekvenser. De månadsvisa kasten visas online i Youtube.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>54. Villig att skriva ett avtal som inkluderar det som Horan har svarat "Ja" eller "Ev. senare".</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
     <!-- Bakgrundsfrågor -->
     <fieldset>
       <legend>Bakgrundsfrågor</legend>
@@ -505,4 +521,5 @@ avsikten.</legend>
 </body>
 
 </html>
+
 
